syntax = "proto3";

package pb;


enum ProductStatus {
    DRAFT = 0;
    PUBLISHED = 1;
    OFF_THE_SHELF = 2;
}

message CreateProductRequest{
    string name = 1;
    string description = 2;
    string price = 3;
    string userID = 4;
    string catalogID = 5;
    int32 status = 6;
    repeated string thumbnails = 7;
}

message CreateProductResponse{
    string id = 1;
    string err = 2;
}

message GetProductsRequest{
	int64 creatorid = 1;
    int64 size = 2;
}

message GetProductsResponse{
    int64 v = 1;
    string err = 2;
}

message ProductUploadRequest{
    bytes b = 1;
    string md5 = 2;
    string name = 3;
}

message ProductUploadResponse{
    string name = 1;
}

message ProductRecord{
    string creator = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    ProductStatus status = 5;
}

service ProductRpcService{
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc Upload(ProductUploadRequest) returns (ProductUploadResponse) {}
}
