syntax = "proto3";

package pb;


message GetUserRequest{
	string userid = 1;
    int64 size = 2;
}

message GetUserResponse{
    UserRecord v = 1;
    string err = 2;
}

message RegisterRequest{
    string username  = 1;
    string firstname = 2;
    string lastname  = 3;
    string email     = 4;
    string password  = 5;
}

message RegisterResponse{
    string id = 1;
    string err = 2;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    UserRecord  user = 1;
    string      token = 2;
    string      err = 3;
}

message UserRecord{
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string salt = 6;
    string userid = 7;
}

service UserRpcService{
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
}
  